# Machine_Learning

./: Adaboost.ipynb  Avaliação de Modelos.ipynb  Decision Trees.ipynb  Feature Selection.ipynb  Gaussian Naive Bayes.ipynb  K-Means.ipynb  KNN.ipynb  LDA.ipynb  LICENSE  Mean Shift.ipynb  Naive Bayes - Gaussian.ipynb  Naive Bayes.ipynb  Naive_Bayes - Gaussian.ipynb  Naive_Bayes_Gaussian.ipynb  Normalização.ipynb  PCA.ipynb  README.md  Random_Forest.ipynb  Redes Neurais.ipynb  Regressão Linear.ipynb  Regressão Logística.ipynb  Regressão Multilinear.ipynb  Regressão Multivariada.ipynb  Regressão Polinomial.ipynb  Regressão_Logística.ipynb  SVM.ipynb  Template.ipynb  ml.yml  pyproject.toml
data/: anuncios.csv  measures.csv  medidas.csv  notas.csv
utils/: plots.py  samples_generator.py
